fix prevent link wrap

--- a/styles.css
+++ b/styles.css
@@ -158,6 +158,7 @@
   color: #fdfdfd;
   display: block;
   transition: 0.3s;
+  white-space: nowrap;
 }
 
 /* When you mouse over the navigation links, change their color */
